Newbie first commit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div class="slides">
 				<section>
 					<h1>Reveal.js</h1>
-					<h3>HTML Presentations Made Easy</h3>
+					<h3>HTML Presentations Made Easy Peasy</h3>
 					<p>
 						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
 					</p>
