--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>Create a discovery layer in minutes with CouchDB, Elasticsearch and jQuery</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="Need a quick user interface/API for your catalogue data?  Maybe one for the OAI data you harvested?  Maybe the two together, plus a bunch of other disparate data sets?  Roll it all into CouchDB (a NoSQL database), and index it all with Elasticsearch (with a full API, no less).  Throw it into an available jQuery and Twitter Bootstrap template, and you have a full, responsive site to use as a production interface, a 'shadow catalogue,' a development site, whatever…  Using freely available scripts and tools, the whole thing can be ready in minutes.">
+		
+		<meta name="author" content="Jonathan T. Younker">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -15,7 +16,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
+		<link rel="stylesheet" href="css/theme/sky.css" id="theme">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -37,10 +38,10 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>HTML Presentations Made Easy Peasy</h3>
+					<h3>Create a discovery layer in minutes with CouchDB, ElasticSearch and jQuery</h3>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+						<small>Jonathan T. Younker</small><br />
+						<small>twitter: <a href="http://twitter.com/jtyounker">@jtyounker</a> / github: <a href="https://github.com/jyounker/">jyounker</a></small>
 					</p>
 				</section>
 
