Minor revision to content

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h3>Create a discovery layer in minutes with CouchDB, ElasticSearch and jQuery</h3>
+					<h3>ElasticSearch and jQuery</h3>
 					<p>
 						<small>Jonathan T. Younker</small><br />
 						<small>twitter: <a href="http://twitter.com/jtyounker">@jtyounker</a> / github: <a href="https://github.com/jyounker/">jyounker</a></small>
