--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h3>CouchDB, ElasticSearch and jQuery</h3>
+					<h1>Instant APIs</h1>
+					<h3>with CouchDB, ElasticSearch and jQuery</h3>
 					<p>
 						<small>Jonathan T. Younker</small><br />
 						<small>twitter: <a href="http://twitter.com/jtyounker">@jtyounker</a> / github: <a href="https://github.com/jyounker/">jyounker</a></small>
