Presentation content mostly done

--- a/index.html
+++ b/index.html
@@ -189,6 +189,20 @@ for r in reader:
 						Notey note note
 					</aside>
 				</section>
+				<section>
+					<h2>Wrap-up</h2>
+					<ul>
+						<li>Limitations</li>
+						<li>Gotchas</li>
+						<li>Questions?</li>
+					</ul>
+					<p />
+					<p><small>[made by hand with <a href="https://github.com/hakimel/reveal.js">reveal.js</a>]</small></p>
+					<aside class="notes">
+						Notey note note
+					</aside>
+					
+				</section>
 				<!-- for ease of c&p:
 				<section>
 					<h2></h2>
